[package]
name = "peace_logs"
version = "0.1.0"
edition = "2021"

[features]
default = []
grpc = ["tonic", "prost", "tonic-build"]
api = ["axum", "serde", "serde_json", "tower-http"]
cli = ["clap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.16"

# grpc optional
tonic = { version = "0.8", optional = true }
prost = { version = "0.11", optional = true }

# axum optional
axum = { version = "0.6.0-rc.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tower-http = { version = "0.3", features = ["auth"], optional = true }

# cli optional
clap = { version = "4.0", features = ["derive"], optional = true }


[build-dependencies]
tonic-build = { version = "0.8", optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
