[package]
name = "peace_rpc"
description = "Peace gRPC service framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = []

tls = ["tonic/tls"]
reflection = ["tonic-reflection"]
admin_rpc = ["peace_logs/grpc", "peace_pb/logs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
tonic = "0.8"
tokio = { version = "1.0" }
tower-service = "0.3"
tower-layer = "0.3"
futures-util = "0.3"

# reflection
tonic-reflection = { version = "0.6", optional = true }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# utils
clap = { version = "4.0", features = ["derive"] }
clap-serde-derive = "0.2.0"
once_cell = "1.16"


# local crates
peace_logs = { path = "../../frame/logs", features = ["cli"] }
tools = { path = "../../lib/tools", features = ["cfg", "async_collections"] }

peace_pb = { path = "../../frame/pb", optional = true }
