[package]
name = "peace_rpc"
description = "Peace gRPC service framework"
version = "0.1.0"
edition = "2021"
authors = ["Pure-Peace"]
repository = "https://github.com/pure-peace/peace"
homepage = "https://github.com/pure-peace/peace"

[features]
default = []

tls = ["tonic/tls"]
reflection = ["tonic-reflection"]
admin_endpoints = ["peace_logs/grpc", "peace_pb"]


[dependencies]
# core
tonic = { version = "0.8" }
tokio = { version = "1.0" }
tower-service = { version = "0.3" }
tower-layer = { version = "0.3" }
futures-util = { version = "0.3" }

# reflection
tonic-reflection = { version = "0.6", optional = true }


# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }

# utils
clap = { version = "4.1", features = ["derive"] }
clap-serde-derive = { version = "0.2" }
once_cell = { version = "1" }


# local crates
peace_logs = { path = "../../frame/logs", features = ["cli"] }
peace_cfg = { path = "../../frame/cfg" }

tools = { path = "../../lib/tools", features = ["async_collections"] }

peace_pb = { path = "../../core/pb", optional = true }


[target.'cfg(unix)'.dependencies]
tokio-stream = "0.1"
