[package]
name = "peace_rpc"
description = "Peace gRPC service framework"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]
default = []

tls = ["tonic/tls"]
reflection = ["tonic-reflection"]
admin_endpoints = ["peace_logs/grpc", "peace_pb"]


[dependencies]
# core
tonic = { workspace = true }
tokio = { workspace = true }
tower-service = { workspace = true }
tower-layer = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

# reflection
tonic-reflection = { workspace = true, optional = true }


# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# utils
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }
once_cell = { workspace = true }


# local crates
peace_logs = { workspace = true, features = ["cli"] }
peace_cfg = { workspace = true }

tools = { workspace = true, features = ["async_collections"] }

peace_pb = { workspace = true, optional = true }


[target.'cfg(unix)'.dependencies]
tokio-stream = "0.1"
