[package]
name = "peace_runtime"
description = "Peace async runtime"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true


[features]
default = ["multi-thread"]

multi-thread = ["tokio/rt-multi-thread"]


[dependencies]
tokio = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# utils
clap = { workspace = true, features = ["derive"] }
clap-serde-derive = { workspace = true }
once_cell = { workspace = true }

# local crates
peace_logs = { workspace = true }
peace_cfg = { workspace = true }
