[package]
name = "peace-utils"
version = "0.8.2"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pure-peace/peace/peace-utils"
description = "Utilities. Password encryption, calculation of file MD5, processing request (multipart), osu!score decryption or encryption, etc."

[features]
default = []

all = [
    "bancho",
    "geoip",
    "passwords",
    "serdes",
    "web",
    "async_file",
    "peace",
    "crypto",
    "macro"
]
with_peace = ["bancho", "geoip", "passwords", "serdes", "web", "peace", "crypto", "macro"]
serdes = ["chrono", "serde"]
passwords = ["lazy_static", "rand", "rust-argon2"]
geoip = ["maxminddb", "memmap", "serde_json", "peace-constants"]
bancho = ["tokio", "bytes", "peace-database", "peace-constants"]
web = [
    "serde_qs",
    "serde",
    "hashbrown",
    "ntex-multipart",
    "futures",
    "bytes",
    "ntex",
    "tokio/fs",
]
python3 = ["pyo3"]
async_file = ["tokio", "md-5"]
peace = ["peace-database", "peace-constants"]
crypto = ["simple-rijndael"]
macro = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
colored = "2.0.0"
indicatif = "0.16"

# bancho / web
bytes = { version="1.0", optional=true }
tokio = { version="1.9", optional=true }
# geoip
maxminddb = { version="0.18", features=["mmap"], optional=true }
memmap = { version="0.7", optional=true }
serde_json = { version="1.0", optional=true }
# password
lazy_static = { version="1.4", optional=true }
rand = { version="0.8", optional=true }
rust-argon2 = { version="0.8", optional=true }
# serde
chrono = { version="0.4", optional=true }
serde = { version="1.0", features=["derive"], optional=true }
# web
serde_qs = { version="0.8", optional=true }
hashbrown = { version="0.11", optional=true }
ntex-multipart = { git="https://github.com/ntex-rs/ntex-extras", rev="4f4258a533ab5015cb14171c7d1aa584a1bf6c18", optional=true }
ntex = { version = "0.5", features = ["tokio"], optional = true }
futures = { version="0.3", optional=true }
# python
pyo3 = { version="0.13.2", features=["auto-initialize"], optional=true }
# async_file
md-5 = { version="0.9", optional=true }
# crypto
simple-rijndael = { version="0.3.1", optional=true }


peace-database = { path="../peace-database", optional=true }
peace-constants = { path="../peace-constants", optional=true }
