[package]
name = "peace-protocol"
version = "0.1.0"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pure-peace/peace"
description = "PEACE PROTOCOL IMPLMENT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

