[package]
name = "bancho-packets"
version = "5.3.0"
description = "osu! bancho packet Reading & Writing library."
documentation = "https://docs.rs/bancho-packets"
readme = "README.md"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["serde", "derive"]

derive = ["bancho-packets-derive"]

[dependencies]
num-traits = "0.2"
enum-primitive-derive = "0.2"

serde = { version = "1.0.156", features = ["derive"], optional = true }
bancho-packets-derive = { version = "0.2.0", path = "./derive", optional = true }

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "packet_bench"
harness = false
